# image-processing

./: .gitignore  .travis.yml  CMakeLists.txt  kernel.cl
src/: CMakeLists.txt  HelloWorld.cpp
